# APEM

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.json  datasources_overview.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml  validate.yaml
apem/: __init__.py  comparison_dcopf_vs_fbmc.ipynb  config_loader.py  core.py  enums.py  execution_chain.py  experiment_fbmc.ipynb  experiment_fbmc_IP_pricing.ipynb  experiment_fmbc.ipynb  market_models.py
apem/allocation/: configuration.py  power_flow_model.py  zonal_configuration.py
apem/data/: data_conversion.py
apem/evaluation/: data_indicators.py  data_plotter.py  data_saver.py  unit_test.py
apem/market_models/: EU_model.py  US_model.py  market_model.py
apem/order_book_based_model/: __init__.py
apem/tests/: analyze_pricing.py  data_analysis.py  data_indicators.py  data_plotter.py  data_saver.py  unit_test.py
apem/unit_based_model/: __init__.py  error.py  solver_configuration.py
apem/utils/: paths.py
code/: euphemia_template.py
data_analysis/: data_analysis.py  run_all.py  unit_test.py
data_analysis/results_data_analysis/: Indicators_PyPSAEurLarge.xlsx  Indicators_PyPSAEurSmall.xlsx  Summary_PyPSAEurSmall.csv
demo/: main.py
demo/allocation/: allocation.py  dcopf.py
demo/data/: market_data.py  parse_data.py  parse_ieee_rts.py
demo/pricing/: ip.py  price_analysis.py  pricing_algorithm.py  write_prices.py
docs/: Makefile  conf.py  configuration.md  custom_datasets.md  index.md  installation.md  make.bat  requirements.txt
docs/_static/: custom.css
docs/apem/: index.md  order_book_based_model.md  unit_based_model.md
docs/node_ranking/: economic_dispatch.md  graph_metrics.md  index.md  market_metrics.md  market_scores.md  network_scores.md  rank_nodes.md
docs/pf_relaxations/: index.md
docs/workflows/: order_book_based_model.md  unit_based_model.md
euphemia/: README.md  euphemia.py  euphemia_config.py  execution_chain.py  main.py
euphemia/cutting/: combinatorial_benders.py  no_good.py  price_based.py
euphemia/data/: run_us_eu_conversion.py
euphemia/enums/: cut_types.py  datasets.py  order_types.py
euphemia/master_problem/: master_problem.py
euphemia/model/: setup_model.py
euphemia/pricing/: price_determination_subproblem.py
euphemia/reinsertions/: prb_reinsertion.py  prmic_prb_reinsertion.py
euphemia/utils/: calculations.py  extraction.py  paths.py
implementation/: euphemia.py  execution_chain.py  main.py
meetings/: 02.10.2023.pptx  12.06.2024.pptx  12.09.2024.pptx  15.10.2024.pptx  18.04.2024.pptx  29.11.2024.pptx
node_ranking/: economic_dispatch.py  graph_metrics.py  market_metrics.py  market_scores.py  network_scores.py  rank_nodes.py
power_flow_relaxations/: README.md  create_figures.py  requirements.txt  run_relaxations.py
scripts/: run_config_matrix.py  run_eu_config_matrix.py
src/: execution_chain.py
src/apem/: README.md  (+1 more)
tests/: test_config_loader.py  test_dcopf.py  test_euphemia.py  test_lost_opp_cost_analysis.py  test_price_analysis.py  test_redispatch_analysis.py  test_welfare_analysis.py  test_zonal_ntc.py  test_zonal_ntc_aggregated.py  test_zonal_ntc_independent.py  test_zonal_ntc_multiedge.py
(+503 files in other folders)
