[build-system]
 requires = ["setuptools>=42"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "APEM"
 version = "0.1.0"     # convention: major.minor.patch
 dependencies = [
 ]
 requires-python = ">=3.10"
 authors = [
   {name = "Teodora Dobos"},
   {name = "Laura Mathews"},
 ]
 maintainers = [
   {name = "Teodora Dobos", email = "teodora.dobos@tum.de"},
   {name = "Laura Mathews", email = "laura.mathews@tum.de"},
 ]
 description = "Allocation and Pricing in Electricity Markets"
 readme = "README.md"
 license = {file = "LICENSE.txt"}
 keywords = ["day-ahead market", "zonal pricing", "nodal pricing", "electricity market"]

 [tool.setuptools.packages.find]      # ensures that all directories and files under `apem` are included in the package distribution
 where = ["."]
 include = ["apem*"]

 [tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"apem" = [
  "data/raw_data/gadm41_DEU_1.shp/*",
  "data/raw_data/pypsa_eur_large/*",
  "data/raw_data/pypsa_eur_small/*"
]