[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
 
[project]
name = "APEM"
version = "1.0.0"     # convention: major.minor.patch
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.3",
  "networkx==3.4.2",
  "matplotlib==3.9.2",
  "gurobipy==12.0.0",
  "pypsa==0.31.1",
  "geopandas==1.0.1",
  "shapely==2.0.6",
  "openpyxl==3.1.5",
  "pyarrow==17.0.0",
 ]
requires-python = ">=3.10"
description = "Allocation and Pricing in Electricity Markets"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = [
  "day-ahead-auction",
  "electricity-market",
  "electricity-pricing",
  "euphemia",
  "nodal-pricing",
  "zonal-pricing",
]

[project.optional-dependencies]
test = [
  "pytest==8.3.3",
]
omie = [
  "OMIEData",
]

[tool.setuptools.packages.find]      # ensures that all directories and files under `apem` are included in the package distribution
where = ["."]
include = ["apem*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"apem" = [
  "data/raw_data/gadm41_DEU_shp/*",
  "data/raw_data/pypsa_eur_large/*",
  "data/raw_data/pypsa_eur_small/*"
]
